prism/themes/prism-magik.css
code[class*="language-"],
pre[class*="language-"] {
	color: #ccc;
	background: none;
	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
	font-size: 0.65rem;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
	word-wrap: normal;
	line-height: 1.5;

	-moz-tab-size: 4;
	-o-tab-size: 4;
	tab-size: 4;

	-webkit-hyphens: none;
	-moz-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;

}

/* Code blocks */
pre[class*="language-"] {
	margin: .5em 0;
	overflow: auto;
}

:not(pre) > code[class*="language-"],
pre[class*="language-"] {
	background: #2d2d2d;
}

/* Inline code */
:not(pre) > code[class*="language-"] {
	padding: .1em;
	border-radius: .3em;
	white-space: normal;
}

.token.property {
  color: #f08080
}

.token.function {
    color: #daa520;
}

.token.prolog,
.token.doctype,
.token.cdata {
	color: #ffe4b5;
}

.token.punctuation,
.token.namespace {
	opacity: .7;
}

.token.tag,
.token.deleted {
	color: #cccccd;
}

.token.selector {
	color: #f9ee98;
}

.token.attr-name,
.token.attr-value,
.token.char,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string,
.token.inserted {
	color: #8F9D6A;
}

.token.atrule {
	color: #7587A6;
}

.token.regex,
.token.important {
	color: #E9C062;
}

.token.pragma {
	color: #f08080;
}

.token.pragma-punctuation {
	color: #f08080;
	opacity: 0.7;
}

.token.comment {
	color: #7f7f7f;
}

.token.documentation {
	color: #ffe4b5;
}

.token.keyword,
.token.keyword-operator, 
.token.builtin {
	color: #00bfff
}

.token.self {
	color: #98f5ff;
}
 
.token.class-name,
.token.boolean, 
.token.variable, 
.token.slot {
    color: #4eee94;
}

.token.symbol, 
.token.unset, 
.token.constant {
	color: #a2cd5a;
}

.token.string {
	color: #deb887;
}

.token.number, 
.token.punctuation,
.token.operator,
.token.declaration {
	color: #ffffff;
}

.token.important,
.token.bold {
	font-weight: bold;
}
.token.italic {
	font-style: italic;
}

.token.entity {
	cursor: help;
}

/* Markup */
.language-markup .token.tag,
.language-markup .token.attr-name,
.language-markup .token.punctuation {
	color: #ac885b;
}

/* Make the tokens sit above the line highlight so the colours don't look faded. */
.token {
	position: relative;
	z-index: 1;
}

